--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.3.4",
+    "country-flag-icons": "^1.5.7",
     "sass": "^1.60.0",
     "vue": "^3.2.47"
   },
