--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.0",
     "axios": "^1.3.4",
     "country-flag-icons": "^1.5.7",
     "sass": "^1.60.0",
